--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 		<target.dir>target</target.dir>
 		<excludeDefaultDirectories>true</excludeDefaultDirectories>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<version.jacoco>0.5.3-SNAPSHOT</version.jacoco>
+		<version.jacoco>0.5.2.20110519202509</version.jacoco>
 	</properties>
 	
 	
