--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,20 @@
             <updatePolicy>never</updatePolicy>
           </snapshots>
         </repository>
-				
+		
+		 <repository>
+            <!-- for jacoco -->
+            <id>sonar</id>
+            <name>Sonar</name>
+            <url>http://repository.sonarsource.org/content/repositories/sonar</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+		
 		<repository>
 			<id>jboss-deprecated</id>
           	<name>JBoss deprecated -remove me soon-</name>
@@ -258,10 +271,5 @@
             <version>${jacoco.version}</version>
         </dependency>
 		
-	    <dependency>
-	    	<groupId>asm</groupId>
-	    	<artifactId>asm-commons</artifactId>
-	    	<version>3.3.1</version>
-	    </dependency>
 	</dependencies>
 </project>
